<?xml version="1.0"?>
<package format="2">
  <name>mapping_relay_2</name>
  <version>0.9.0</version>
  <description>SubT Mapping Server ROS Relay</description>

  <maintainer email="ethan.a.stump2.civ@mail.mil">Ethan Stump</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>python-cbor</depend>
  <depend>python-requests</depend>

</package>
